ja pesquisa sem sser casesensitive e acho que já acabei a implementação pedida no enunciado